feat: [OeX_Creds-351] add issued data model name to Result page

--- a/openedx_wallet/templates/issuance_result.html
+++ b/openedx_wallet/templates/issuance_result.html
@@ -39,6 +39,7 @@
 <div class="container headers">
     <h1>{% trans "Open edX Sandbox Wallet" %}</h1>
     <h3>{% trans "Issued verifiable credential" %}</h3>
+    <h5>({{ data_model_name }})</h5>
 </div>
 
 <div class="container preview">
